@@ -56,6 +56,17 @@
             <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
         </File>
 
+        <RollingFile name="orphan_terms" append="true" fileName="logs/orphan_terms.log" filePattern="logs/orphan_terms.log.%d{yyyy-MM}">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
+        <File name="orphan_terms_summary" append="false" fileName="logs/orphan_terms_summary.log">
+            <PatternLayout pattern="%m%n"/>
+            <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
+        </File>
+
         <RollingFile name="qtls_with_inactive_markers" append="true" fileName="logs/qtls_with_inactive_markers.log" filePattern="logs/qtls_with_inactive_markers.log.%d{yyyy-MM}">
             <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
             <Policies>
@@ -136,6 +147,11 @@
         </Logger>
         <Logger name="updatedAnnots" level="debug" additivity="false">
             <AppenderRef ref="updatedAnnots"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+        <Logger name="orphan_terms" level="debug" additivity="false">
+            <AppenderRef ref="orphan_terms"/>
+            <AppenderRef ref="orphan_terms_summary"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
     </Loggers>
